BoaUAT/src/objects/Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Date_of_Invoice_Sent__c</fullName>
        <label>Date of Invoice Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_for_Copy_Invocie__c</fullName>
        <label>Email for Copy Invoice</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_for_Copy_Invoice__c</fullName>
        <label>Email for Copy Invoice</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_for_Invocie__c</fullName>
        <label>Email for Invoice</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_for_Invoice__c</fullName>
        <label>Email for Invoice</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Freight_Cost__c</fullName>
        <label>Freight Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Status__c</fullName>
        <label>Invoice Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MYOB_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>MYOB External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MYOB_Invoice_No__c</fullName>
        <label>MYOB Invoice No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricebook__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pricebook</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promised_Date__c</fullName>
        <label>Promised Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ship_Via__c</fullName>
        <label>Ship Via</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Air</fullName>
                </value>
                <value>
                    <fullName>Airfreight</fullName>
                </value>
                <value>
                    <fullName>UK Post</fullName>
                </value>
                <value>
                    <fullName>Best Way</fullName>
                </value>
                <value>
                    <fullName>C.O.D</fullName>
                </value>
                <value>
                    <fullName>Courier</fullName>
                </value>
                <value>
                    <fullName>Pickup</fullName>
                </value>
                <value>
                    <fullName>Road Freight</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Invoice</label>
    <nameField>
        <displayFormat>INV-{00000}</displayFormat>
        <label>Invoice No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>